listo_para_transformers

--- a/templates/home_admin.html
+++ b/templates/home_admin.html
@@ -13,8 +13,13 @@
             </a>
           </li>
           <li class="nav-item">
+            <a class="nav-link" href="{% url 'nuevo_productos' %}" onclick="loadContent('perfil')">
+              <i class="bi bi-person-circle"></i> Nuevo Productos
+            </a>
+          </li>
+          <li class="nav-item">
             <a class="nav-link" href="{% url 'index_productos' %}" onclick="loadContent('perfil')">
-              <i class="bi bi-person-circle"></i> Productos
+              <i class="bi bi-person-circle"></i> Listar Productos
             </a>
           </li>
           <li class="nav-item">
